--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <a class="header-button"
                         href="https://api.whatsapp.com/send?phone=551100000000&text=Quero%20fazer%20um%20agendamento"
                         target="_blank">
-                        Agendar horário
+                        Faça seu pedido
                     </a>
                 </div>
             </nav>
